# deep-train

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml  prod.yaml  staging.yaml
deep_train/: pyproject.toml  torch_model.py  utils.py
deep_train/deep_train/common/: constants.py  utils.py
deep_train/deep_train/pytorch/: base_training_logic.py  checkpointer.py  contexts.py  reproducibility.py  trainer.py
deep_train/deep_train/pytorch/tasks/: __init__.py  base_task.py  sequence_classification_task.py
deep_train/tests/: deep_train_test.py
examples/: pyproject.toml
examples/examples/: mnist.py
examples/examples/simple/: mnist.py
tests/: deep_train_test.py  requirements.txt
