[tool.poetry]
name = "deep-train"
version = "0.1.1-alpha.4"
description = "Decoupled training for PyTorch"
authors = ["Harsh Saini <harshsaini90@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/harshsaini/deep-train"
repository = "https://github.com/harshsaini/deep-train"
include = [
    "LICENSE",
]
keywords = ["deep_neural_networks", "pytorch", "deepnet", "training"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.0"
numpy = "^1.20.1"
tqdm = "^4.59.0"
tensorboard = "^2.4.1"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.black]
line-length = 79
target-version = ['py37']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
