[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Examples of using deep-train"
authors = ["Harsh Saini <harshsaini90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
deep-train = {path = "../deep_train", develop = true}
torchvision = "^0.9.0"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
